fix: Adjust Table of Contents spacing

--- a/assets/sass/partials/table-of-contents.scss
+++ b/assets/sass/partials/table-of-contents.scss
@@ -39,7 +39,7 @@ aside.table-of-contents {
 details.table-of-contents {
   display: none;
   margin: 2rem 0;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   background: shared.$background-tertiary;
   border-radius: 0.5rem;
 
